@@ -1,3 +1,6 @@
+2005-06-15  Alex Roitman  <shura@gramps-project.org>
+	* src/ListBox.py (EventListBox.set_place): Fix place setting.
+
 2005-06-14  Alex Roitman  <shura@gramps-project.org>
 	* src/events.png, src/repos.png, src/repos24.png: Add GNOME icons
 	for the stock calendar and drawer.
